<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="broadgalaxy">Broadgalaxy</string>
    
    <string name="message">message</string>
    <string name="no_user_id">no user id</string>
    <string name="no_sig_info">no sig info</string>
	
	<string name="dest_address">destination address</string>
    <string name="user_id">user id: </string>
    <string name="btn_connect">connect device</string>
    <string name="locate">locate</string>
    <string name="no_locaton">no location info.</string>
    <string name="sig">sig</string>
    <string name="power">power</string>
    <string name="about">About</string>
    
    <!-- BoxActivity -->
    <string name="select_contact">select contact</string>
    <string name="dia_delete_msg_title">delete meesage</string>
    <string name="dia_delete_msg_message">delete selected messsage, are you sure?</string>
    <string name="delete_thread">delete thread</string>
    <string name="no_data">no data.</string>
    
    <!-- chat activity -->
    <string name="userid_hint">user id, such as ox000238 or 568</string>
    <string name="hit_message">input message.</string>
    <string name="sender_address">sender address</string>
    <string name="receiver_address">receipt: </string>
    
    <!--  Broadgalaxy -->
    <string name="send">Send</string>
    <string name="not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected">connected:</string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
</resources>
