<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/user_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_user_id" />

    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_locaton"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sig_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_sig_info" />
    
    <ProgressBar 
        android:visibility="gone"
        android:id="@+id/progress"
        android:max="4"
        android:progress="4"
        android:secondaryProgress="0"
        android:indeterminate="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:src="@android:drawable/divider_horizontal_dark" />

    <com.broadgalaxy.bluz.component.Navigation
        android:visibility="gone"
        android:id="@+id/navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false" />

    <Button
        android:id="@+id/locate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/locate" />

    <Button
        android:id="@+id/sig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/sig" />

    <Button
        android:id="@+id/connect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <Button
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/message" />

</LinearLayout>